--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,27 @@
+astroid==1.5.3
 certifi==2017.11.5
 chardet==3.0.4
 click==6.7
+enum-compat==0.0.2
+eventlet==0.21.0
 Flask==0.12.2
+Flask-SocketIO==2.9.3
+greenlet==0.4.12
 idna==2.6
+isort==4.2.15
 itsdangerous==0.24
 Jinja2==2.10
+lazy-object-proxy==1.3.1
 MarkupSafe==1.0
+mccabe==0.6.1
 PyJWT==1.5.3
 PySocks==1.6.7
+python-engineio==2.0.1
+python-socketio==1.8.4
 pytz==2017.3
 requests==2.18.4
 six==1.11.0
 twilio==6.8.4
 urllib3==1.22
 Werkzeug==0.12.2
+wrapt==1.10.11
